Fix form sizing overflow

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@
     --gray: #EEE;
     --light: #E5E7EB;
     --left-padding: 64px;
-    --right-padding: max(36px, 20%);
+    --right-padding: max(32px, 15%);
 }
 
 * {
@@ -109,6 +109,7 @@ aside > div > img {
 
 main {
     flex: 2;
+    min-width: 346px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -130,7 +131,7 @@ main > div {
 }
 
 form {
-    width: max(80%, 600px);
+    width: 100%;
     margin: 28px 0;
     display: flex;
     flex-flow: row wrap;
@@ -142,7 +143,7 @@ form > div {
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
-    width: max(45%, 250px);
+    width: max(min(45%, 350px), 250px);
 }
 
 div > label,
